--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-firebase/app": "^18.5.0",
+    "@react-native-firebase/database": "^18.5.0",
+    "@react-native-firebase/firestore": "^18.5.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.7",
@@ -17,7 +20,8 @@
     "firebase": "^10.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.72.4",
+    "react-native": "0.72.5",
+    "react-native-check-box": "^2.1.7",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.0",
